outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_14-11-57/evaluations/problem_eval-3565980191496683449_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores (calculating node influence as the product of centrality and betweenness), adaptive exploration bonuses that consider both remaining nodes and path history, and a novel selection mechanism that combines weighted scores with a probabilistic component for diversification.}
                                                                                                                                                                                                                                                                                                    ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores (calculating node influence as the product of centrality and betweenness), adaptive exploration bonuses that consider both remaining nodes and path history, and a novel selection mechanism that combines weighted scores with a probabilistic component for diversification.}
                                                                                                                                                                                                                                                                                                    ^
SyntaxError: unmatched '}'
